Tue Oct 12 06:44:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Local_Memory_Pool.h:
        * ace/MMAP_Memory_Pool.h:
        * ace/Pagefile_Memory_Pool.h:
        * ace/Sbrk_Memory_Pool.h:
        * ace/Shared_Memory_Pool.h:
          Fixed incorrect doxygen file tag

Mon Oct 11 19:43:22 2004  Irfan Pyarali  <irfan@oomworks.com>

	* ace/Local_Memory_Pool.cpp (acquire):

	  Added ace/OS_Memory.h.

	* ace/MMAP_Memory_Pool.cpp:

	  Added ace/OS_NS_string.h and ace/OS_NS_sys_stat.h.

	* ace/Pagefile_Memory_Pool.h:

	  Added ace/os_include/sys/os_mman.h.

Mon Oct 11 09:52:40 2004  Marek Brudka  <mbrudka@elka.pw.edu.pl>

        * ace/config-qnx-rtp-62x.h:
        Set ACE_LACKS_CUSERID.

Mon Oct 11 10:14:36 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * examples/System_V_IPC/SV_Semaphores/Semaphores_1.cpp:
        * tests/SV_Shared_Memory_Test.cpp:

          Changed to #include ace/SV_Sempahore_Complex.h, which had been
          implicitly included via Memory_Pool.h, even though it was not
          needed by the interface or implementation.

        * ace/Makefile.am:
        * ace/ace.mpc:

          Updated.

        * ace/Local_Memory_Pool.cpp:
        * ace/Local_Memory_Pool.h:
        * ace/MMAP_Memory_Pool.cpp:
        * ace/MMAP_Memory_Pool.h:
        * ace/Pagefile_Memory_Pool.cpp:
        * ace/Pagefile_Memory_Pool.h:
        * ace/Pagefile_Memory_Pool.inl:
        * ace/Sbrk_Memory_Pool.cpp:
        * ace/Sbrk_Memory_Pool.h:
        * ace/Shared_Memory_Pool.cpp:
        * ace/Shared_Memory_Pool.h:

          New files.

        * ace/Memory_Pool.cpp:
        * ace/Memory_Pool.inl:
        * ace/Memory_Pool.h:

          Split apart Memory_Pool.{cpp,h,inl} into a separate set of files
          for each class and "outlining" inlined virtual functions.  Since
          the implementations are related by interface, not inheritance;
          locating them all in the same file typically results in static