@@ -1,3 +1,10 @@
+Tue Oct 12 17:58:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/Sbrk_Memory_Pool.h:
+        * ace/Shared_Memory_Pool.h:
+
+          Added ace/os_include/sys/os_mman.h.
+
 Tue Oct 12 06:44:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Local_Memory_Pool.h:
